Bug 178463 - Chat window focus on text input field lost
Summary: Chat window focus on text input field lost
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-22 13:58 UTC by robert lindgren
Modified: 2008-12-24 15:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description robert lindgren 2008-12-22 13:58:28 UTC
Version:           Version 0.60.81 (using Devel)
OS:                Linux
Installed from:    Compiled sources

Clicking on the history part of the chat windows makes the text input field loose focus. There is no way of getting focus back, but to click on the input field. This is a regression compared to 4.1.x, and 3.5.x for that matter.

It's also possible to loose focus by pressing shift+tab. And no way to get it back but to use the rodent.

This is really annoying bug since it was easy, in 4.1.x to just click any ware on the chat window and start typing, now one must press the window list or the bottom part of the chat window, and that takes much more precision.
Comment 1 Roman Jarosz 2008-12-24 15:29:27 UTC
SVN commit 901164 by rjarosz:

Fix bug 178463 Chat window focus on text input field lost

BUG: 178463



 M  +1 -1      chatview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=901164