Fix bug 178463 Chat window focus on text input field lost

BUG: 178463


svn path=/trunk/KDE/kdenetwork/kopete/; revision=901164